--- a/index.html
+++ b/index.html
@@ -1,11 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <meta charset="UTF-8">
-  <title>Test<title>
-</head>
-<body>
-  <h1>Test</h1>
-  <footer>Test</footer>
-</body>
-</html>
+Hello World!
