Testing basic changes to front matter and markdown

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
-layout: post
-title: test post
+title: " "
+layout: home
+author_profile: true
 ---
 
-Hello World!
+This serves as a personal website.
