--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 ---
-title: "Personal Website"
-layout: post
+title: Home
 ---
-
-This serves as a personal website.
+<!doctype html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>{{ page.title }}</title>
+  </head>
+  <body>
+    <h1>{{ "Hello World!" | downcase }}</h1>
+  </body>
+</html>
