--- a/_pages/about.html
+++ b/_pages/about.html
@@ -10,7 +10,7 @@ redirect_from:
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  Helloooo!!! I'm Noah, a research scientist within Amazon working on non-English language expansion for Alexa. I recently defended my [thesis](https://www.proquest.com/openview/59a7e3ff01e444dd0b5199f26d96c10a/1?pq-origsite=gscholar&cbl=18750&diss=y) and earned my PhD in Computational Biology at [Washington University School of Medicine in St. Louis](https://medicine.wustl.edu/).
+  Hello! I'm Noah, a research scientist within Amazon working on non-English language expansion for Alexa. I recently defended my [thesis](https://www.proquest.com/openview/59a7e3ff01e444dd0b5199f26d96c10a/1?pq-origsite=gscholar&cbl=18750&diss=y) and earned my PhD in Computational Biology at [Washington University School of Medicine in St. Louis](https://medicine.wustl.edu/).
   I focused on applications of machine learning to problems in drug discovery and toxicology and my work was supervised by Dr. Joshua Swamidass in the [Department of Pathology & Immunology](https://pathology.wustl.edu/).
   In particular, my work involved modeling drug metabolism networks to guide development in early stage prediction of drug toxicity, formation of reactive chemical species, and likelihood of adverse drug reactions.
   As part of my research, I also serve as a core maintainer of [XenoSite](https://swami.wustl.edu/xenosite/) and I launched the [XenoNet Web Server](https://swami.wustl.edu/xenonet/).
@@ -18,16 +18,16 @@ redirect_from:
   </p>
 
   <p>
-  Lorem ipsum
+  I am in the process of updating my website and have a few upcoming projects to announce heading into 2023 Q3, so feel free to keep checking in!
   </p>
 </div>
 
-<div class="docs-section" id="news">  
+<!--<div class="docs-section" id="news">  
   <h4>News</h4>
   <p>
   Lorem ipsum
   </p> 
-</div>
+</div>-->
 
 
 <!-- ========== PUBLICATIONS ========== -->
