--- a/_pages/about.html
+++ b/_pages/about.html
@@ -10,11 +10,17 @@ redirect_from:
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  Hello! I'm Noah, a research scientist within Amazon working on non-English language expansion for Alexa. In 2021, I defended my <a href="https://www.proquest.com/openview/59a7e3ff01e444dd0b5199f26d96c10a/1?pq-origsite=gscholar&cbl=18750&diss=y" target="_blank">thesis</a> and earned my PhD in Computational Biology at Washington University School of Medicine in St. Louis.
-  I focused on applications of machine learning to problems in drug discovery and toxicology and my work was supervised by Dr. Joshua Swamidass in the Department of Pathology & Immunology.
-  In particular, my work involved modeling drug metabolism networks to guide development in early stage prediction of drug toxicity, formation of reactive chemical species, and likelihood of adverse drug reactions.
+  Hello! I'm Noah, a research scientist at Amazon.
+  I work on non-English language expansion for Alexia and my research interests are in multilingual natural language understanding and graph machine learning for natural language processing.
+
+  I also maintain expertise and interest in advancing the field of machine learning and drug discovery.
+  Prior to Amazon, I earned a PhD in Computational Biology at Washington University School of Medicine in St. Louis within the Department of Pathology & Immunology (<a href="https://www.proquest.com/openview/59a7e3ff01e444dd0b5199f26d96c10a/1?pq-origsite=gscholar&cbl=18750&diss=y" target="_blank">Thesis</a>).
+  My research focused on applications of deep learning to improving drug toxicity screening and safety assessment.
+  For example, detecting signals from electronic health records that relate to drug-drug interactions and modeling drug metabolism networks to predict vectors of drug toxicity, formation of reactive chemical species, and likelihood of adverse drug reactions.
   As part of my research, I served as a core maintainer of XenoSite and I launched the XenoNet Web Server.
   XenoSite is a prediction web service for small molecule biochemistry that hosts an online collection of metabolism and reactivity mathematical models that systematically summarize the data from thousands of papers into a condensed and useable computational tool that predicts adduction and potential toxicity of molecules.
+
+  If you are looking for a collaborator or simply want to connect with someone who shares your passion for using technology to make a positive impact in the world, please don't hesitate to get in touch.
   </p>
 
   <p>
