Update about.html with book info

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,11 +11,16 @@ redirect_from:
   <h4>Bio</h4>
   <p>
   Hello! I'm Noah, a research scientist at Amazon.
-  I work on non-English language expansion for Alexia and my research interests are in multilingual natural language understanding and graph machine learning for natural language processing.
+  I work on non-English language expansion for Alexa and my research interests are in multilingual problem contexts as well as graph machine learning for natural language processing.
   </p>
 
   <p>
   I also maintain expertise and interest in advancing the field of machine learning and drug discovery.
+  I am the author of "Machine Learning for Drug Discovery" (Manning Publications, In Preparation) and we will begin early access release of the first 4 chapters in Q1 2024.
+  Feel free to browse (or contribute) to the official <a href="https://github.com/nrflynn2/ml-drug-discovery" target="_blank">code repository</a>, though keep in mind that significant development is still underway!
+  </p>
+
+  <p>
   Prior to Amazon, I earned a PhD in Computational Biology at Washington University School of Medicine in St. Louis within the Department of Pathology & Immunology (<a href="https://www.proquest.com/openview/59a7e3ff01e444dd0b5199f26d96c10a/1?pq-origsite=gscholar&cbl=18750&diss=y" target="_blank">Thesis</a>).
   My research focused on applications of deep learning to improving drug toxicity screening and safety assessment.
   For example, detecting signals from electronic health records that relate to drug-drug interactions and modeling drug metabolism networks to predict vectors of drug toxicity, formation of reactive chemical species, and likelihood of adverse drug reactions.
