--- a/_pages/about.html
+++ b/_pages/about.html
@@ -6,21 +6,31 @@ excerpt: "About Me"
 redirect_from: 
   - /about/
 ---
+<!-- ========== NEWS ========== -->
+<div class="docs-section" id="news">
+  <h4>News</h4>
+  <p>
+  I wrote a book with Manning Publications! I'm happy to announce that "Machine Learning for Drug Discovery" is now available via Manning's Early Access Program (MEAP)! Check it out and use code "mlflynn" for 45% off (valid until March 14th): https://www.manning.com/books/machine-learning-for-drug-discovery?utm_source=flynn&utm_medium=affiliate&utm_campaign=book_flynn_machine_2_29_24&a_aid=flynn&a_bid=ddb44578&chan=mm_website
+  The search for novel, improved therapeutics is an important problem and impacts all of our lives. "Machine Learning for Drug Discovery" is an informative deep dive that aligns machine learning and deep learning theory with contemporary applications in drug discovery. While a cliché, it is nevertheless true: this is the book I wish I had available to me when I started my graduate studies and early career in industry.
+  Each chapter is structured around real-world scenarios and iteratively builds up a solution with code provided every step of the way. By the end, you'll have the agency to explore, apply, replicate, and improve upon innovations and publications at the intersection of machine learning and drug discovery. Both seasoned researchers and newcomers welcome -- no prior background in chemistry or machine learning is necessary!
+  With MEAP, the first five chapters are immediately available along with access to a forum where we can directly discuss the projects and material. You'll also have first access to later chapters as they are progressively released, accompanying your learning pace. Next chapter coming soon, where we'll replicate the findings of a recent high impact paper!
+
+  Feel free to browse (or contribute) to the official <a href="https://github.com/nrflynn2/ml-drug-discovery" target="_blank">code repository</a>, though keep in mind that significant development is still underway!
+  
+  Happy learning!
+  </p>
+</div>
+
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
   <p>
-  Hello! I'm Noah, a research scientist at Amazon.
-  I work on non-English language expansion for Alexa and my research interests are in multilingual problem contexts as well as graph machine learning for natural language processing.
+  Hello! I'm Noah, a research scientist at Amazon within the Artificial General Intelligence (AGI) organization.
+  My focus is on applications of large language models in dialogue systems, multilingual natural language understanding, and graph machine learning for natural language processing.
   </p>
 
   <p>
   I also maintain expertise and interest in advancing the field of machine learning and drug discovery.
-  I am the author of "Machine Learning for Drug Discovery" (Manning Publications, In Preparation) and we will begin early access release of the first 4 chapters in Q1 2024.
-  Feel free to browse (or contribute) to the official <a href="https://github.com/nrflynn2/ml-drug-discovery" target="_blank">code repository</a>, though keep in mind that significant development is still underway!
-  </p>
-
-  <p>
   Prior to Amazon, I earned a PhD in Computational Biology at Washington University School of Medicine in St. Louis within the Department of Pathology & Immunology (<a href="https://www.proquest.com/openview/59a7e3ff01e444dd0b5199f26d96c10a/1?pq-origsite=gscholar&cbl=18750&diss=y" target="_blank">Thesis</a>).
   My research focused on applications of deep learning to improving drug toxicity screening and safety assessment.
   For example, detecting signals from electronic health records that relate to drug-drug interactions and modeling drug metabolism networks to predict vectors of drug toxicity, formation of reactive chemical species, and likelihood of adverse drug reactions.
