Update discount code for ML4DD

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -10,7 +10,7 @@ redirect_from:
 <div class="docs-section" id="news">
   <h4>News</h4>
   <p>
-  I wrote a book with Manning Publications! I'm happy to announce that "Machine Learning for Drug Discovery" is now available via Manning's Early Access Program (MEAP)! <a href="https://www.manning.com/books/machine-learning-for-drug-discovery?utm_source=flynn&utm_medium=affiliate&utm_campaign=book_flynn_machine_2_29_24&a_aid=flynn&a_bid=ddb44578&chan=mm_website" target="_blank">Check it out here</a> and use code "mlflynn" for 45% off (valid until March 14th).
+  I wrote a book with Manning Publications! I'm happy to announce that "Machine Learning for Drug Discovery" is now available via Manning's Early Access Program (MEAP)! <a href="https://www.manning.com/books/machine-learning-for-drug-discovery?utm_source=flynn&utm_medium=affiliate&utm_campaign=book_flynn_machine_2_29_24&a_aid=flynn&a_bid=ddb44578&chan=mm_website" target="_blank">Check it out here</a> and use code "au35fly" for a 35% discount!
   </p>
 
   <p>
