Update CV and job experience

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -11,6 +11,8 @@ redirect_from:
   <h4>News</h4>
   <p>
   I wrote a book with Manning Publications! I'm happy to announce that "Machine Learning for Drug Discovery" is now available via Manning's Early Access Program (MEAP)! <a href="https://www.manning.com/books/machine-learning-for-drug-discovery?utm_source=flynn&utm_medium=affiliate&utm_campaign=book_flynn_machine_2_29_24&a_aid=flynn&a_bid=ddb44578&chan=mm_website" target="_blank">Check it out here</a> and use code "au35fly" for a 35% discount!
+  Feel free to browse (or contribute) to the official <a href="https://github.com/nrflynn2/ml-drug-discovery" target="_blank">code repository</a>, though keep in mind that significant development is still underway!
+  Happy learning!
   </p>
 
   <p>
@@ -19,9 +21,9 @@ redirect_from:
   </p>
 
   <p>
-  With MEAP, the first five chapters are immediately available along with access to a forum where we can directly discuss the projects and material. You'll also have first access to later chapters as they are progressively released, accompanying your learning pace. Next chapter coming soon, where we'll replicate the findings of a recent high impact paper!
-  Feel free to browse (or contribute) to the official <a href="https://github.com/nrflynn2/ml-drug-discovery" target="_blank">code repository</a>, though keep in mind that significant development is still underway!
-  Happy learning!
+  I've recently released two more chapters!
+  In chapter 6, "Cast Study: Small Molecule Binding to an RNA Target," we introduce RNA's role in therapeutic development by replicating recent computational studies from Cai et al. [1] and Yazdani et al [2], contextualizing the authors' decisions step-by-step and producing an exemplary quantitative structure-activity relationship (QSAR) pipeline.
+  In contrast, chapter 7, "Unsupervised Learning: Repurposing Drugs, Curating Compounds, & Screening Fragments," is more like a buffet of unsupervised learning applications in drug repurposing (dimensionality reduction), compound library design (clustering), and fragment-based drug discovery (density estimation), with the latter based on work from McCorkindale et al. [3]
   </p>
 </div>
 
@@ -30,6 +32,7 @@ redirect_from:
   <h4>Bio</h4>
   <p>
   Hello! I'm Noah, a research scientist at Amazon within the Artificial General Intelligence (AGI) organization.
+  I am also adjunct faculty within UC Berkeley's Master of Molecular Science and Software Engineering program, where I am the course designer and instructor for "Software Engineering Fundamentals for Molecular Sciences."
   My focus is on applications of large language models in dialogue systems, multilingual natural language understanding, and graph machine learning for natural language processing.
   </p>
 
