--- a/_pages/about.html
+++ b/_pages/about.html
@@ -80,7 +80,7 @@ redirect_from:
       {% for paper in site.data.publications.papers %}
         <div>
             <div class="figure">
-                <img style="float:left;margin-bottom:20px;margin-right:30px;vertical-align:middle;" src="{{ paper.teaser_image }}" width="220"/>
+                <img style="float:left;margin-bottom:20px;margin-right:30px;vertical-align:middle;" src="{{ paper.teaser_image | prepend: site.baseurl }}" width="220"/>
             </div>
             <div class="paper">
               <p class="title"><b>{{ paper.title }}</b></p>
