--- a/_pages/about.html
+++ b/_pages/about.html
@@ -10,56 +10,40 @@ redirect_from:
 <div class="docs-section" id="news">
   <h4>News</h4>
   <p>
-  I wrote a book with Manning Publications! I'm happy to announce that "Machine Learning for Drug Discovery" is now available via Manning's Early Access Program (MEAP)! <a href="https://www.manning.com/books/machine-learning-for-drug-discovery?utm_source=flynn&utm_medium=affiliate&utm_campaign=book_flynn_machine_2_29_24&a_aid=flynn&a_bid=ddb44578&chan=mm_website" target="_blank">Check it out here</a> and use code "au35fly" for a 35% discount!
-  Feel free to browse (or contribute) to the official <a href="https://github.com/nrflynn2/ml-drug-discovery" target="_blank">code repository</a>, though keep in mind that significant development is still underway!
-  Happy learning!
+  Check out my book with Manning Publications! "Machine Learning for Drug Discovery" is available via Manning's Early Access Program (MEAP)! <a href="https://www.manning.com/books/machine-learning-for-drug-discovery?utm_source=flynn&utm_medium=affiliate&utm_campaign=book_flynn_machine_2_29_24&a_aid=flynn&a_bid=ddb44578&chan=mm_website" target="_blank">Check it out here</a> and use code "au35fly" for a 35% discount!
+  Feel free to browse (or contribute) to the official <a href="https://github.com/nrflynn2/ml-drug-discovery" target="_blank">code repository</a>!
+  I've recently released chapter 10 on "Generative Models for De Novo Design" -- happy learning!
   </p>
 
+  <p>
+  I’m thrilled to announce that I’m presenting a short demo at hashtag#PyTorchConf, Oct 22-23 in San Francisco!  Check out my session, "Designing Medicines from Scratch: PyTorch Workflows for De Novo Drug Discovery", and explore the schedule (https://bit.ly/4cjkIE6)
+  </p>
+  
   <p>
   The search for novel, improved therapeutics is an important problem and impacts all of our lives. "Machine Learning for Drug Discovery" is an informative deep dive that aligns machine learning and deep learning theory with contemporary applications in drug discovery. While a cliché, it is nevertheless true: this is the book I wish I had available to me when I started my graduate studies and early career in industry.
   Each chapter is structured around real-world scenarios and iteratively builds up a solution with code provided every step of the way. By the end, you'll have the agency to explore, apply, replicate, and improve upon innovations and publications at the intersection of machine learning and drug discovery. Both seasoned researchers and newcomers welcome -- no prior background in chemistry or machine learning is necessary!
-  </p>
-
-  <p>
-  I've recently released two more chapters!
-  In chapter 6, "Cast Study: Small Molecule Binding to an RNA Target," we introduce RNA's role in therapeutic development by replicating recent computational studies from Cai et al. [1] and Yazdani et al [2], contextualizing the authors' decisions step-by-step and producing an exemplary quantitative structure-activity relationship (QSAR) pipeline.
-  In contrast, chapter 7, "Unsupervised Learning: Repurposing Drugs, Curating Compounds, & Screening Fragments," is more like a buffet of unsupervised learning applications in drug repurposing (dimensionality reduction), compound library design (clustering), and fragment-based drug discovery (density estimation), with the latter based on work from McCorkindale et al. [3]
   </p>
 </div>
 
 <!-- ========== BIO ========== -->
 <div class="docs-section" id="bio">
   <h4>Bio</h4>
-  <p>
-  Hello! I'm Noah, a research scientist at Amazon within AWS AI Labs. Previously, I was a member of Amazon's Artificial General Intelligence (AGI) organization.
-  I am also adjunct faculty within UC Berkeley's Master of Molecular Science and Software Engineering program, where I am the course designer and instructor for "Software Engineering Fundamentals for Molecular Sciences."
-  My focus is on applications of large language models in dialogue systems, multilingual natural language understanding, and graph machine learning for natural language processing.
+  <p>  
+  As an Applied Scientist at AWS Agentic AI, I specialize in developing scalable and robust artificial intelligence systems. My work involves repurposing foundation models for improved domain adaptation and long context reasoning, building customizable multi-agent frameworks that reduce development time and primitives that generalize across multiple verticals (deep research, coding, data science), and improving agentic evaluation processes for greater customization and personalization. I am also interested in mixture-of-agents and parameter-efficient reinforcement learning.
   </p>
-
   <p>
-  I also maintain expertise and interest in advancing the field of machine learning and drug discovery.
-  Prior to Amazon, I earned a PhD in Computational Biology at Washington University School of Medicine in St. Louis within the Department of Pathology & Immunology (<a href="https://www.proquest.com/openview/59a7e3ff01e444dd0b5199f26d96c10a/1?pq-origsite=gscholar&cbl=18750&diss=y" target="_blank">Thesis</a>).
-  My research focused on applications of deep learning to improving drug toxicity screening and safety assessment.
-  For example, detecting signals from electronic health records that relate to drug-drug interactions and modeling drug metabolism networks to predict vectors of drug toxicity, formation of reactive chemical species, and likelihood of adverse drug reactions.
-  As part of my research, I served as a core maintainer of XenoSite and I launched the XenoNet Web Server.
-  XenoSite is a prediction web service for small molecule biochemistry that hosts an online collection of metabolism and reactivity mathematical models that systematically summarize the data from thousands of papers into a condensed and useable computational tool that predicts adduction and potential toxicity of molecules.
+  Previously, I was a Research Scientist with Amazon's Alexa & AGI team , where I contributed to the Amazon Nova model family. There, I focused on enhancing tool usage capabilities and developing dynamic data selection strategies for multilingual expansion, all while owning experimentation and production model release cycles.
   </p>
-
-  <p>
-  If you are looking for a collaborator or simply want to connect with someone who shares your passion for using technology to make a positive impact in the world, please don't hesitate to get in touch.
+  <p>  
+  My background is rooted in the intersection of deep learning and drug discovery, which was the focus of my PhD at Washington University in St. Louis and the subject of my book, "Machine Learning for Drug Discovery" (check it out: https://www.manning.com/books/machine-learning-for-drug-discovery).
   </p>
-
-  <p>
-  I am in the process of updating my website and have a few upcoming projects to announce heading into 2023 Q3, so feel free to keep checking in!
+  <p>  
+  My doctoral research involved modeling drug metabolism networks using graph neural networks to predict drug toxicity and applying machine learning to electronic health records to predict drug-induced liver injury and drug-drug interactions. As part of my research, I served as a core maintainer of XenoSite (https://swami.wustl.edu/xenosite/) and I launched the XenoNet Web Server (https://swami.wustl.edu/xenonet/). I remain connected to the academic community as an Adjunct Instructor at the University of California, Berkeley , where I develop and teach graduate-level courses in machine learning and cheminformatics.
+  </p>
+  <p>  
+  I'm always interested in connecting with others who are passionate about building impactful technology. Please feel free to reach out to discuss agentic AI, computational drug discovery, or potential collaborations.
   </p>
 </div>
-
-<!--<div class="docs-section" id="news">  
-  <h4>News</h4>
-  <p>
-  Lorem ipsum
-  </p> 
-</div>-->
 
 
 <!-- ========== PUBLICATIONS ========== -->
