--- a/_pages/about.html
+++ b/_pages/about.html
@@ -16,12 +16,7 @@ redirect_from:
   </p>
 
   <p>
-  I’m thrilled to announce that I’m presenting a short demo at hashtag#PyTorchConf, Oct 22-23 in San Francisco!  Check out my session, "Designing Medicines from Scratch: PyTorch Workflows for De Novo Drug Discovery", and explore the schedule (https://bit.ly/4cjkIE6)
-  </p>
-  
-  <p>
-  The search for novel, improved therapeutics is an important problem and impacts all of our lives. "Machine Learning for Drug Discovery" is an informative deep dive that aligns machine learning and deep learning theory with contemporary applications in drug discovery. While a cliché, it is nevertheless true: this is the book I wish I had available to me when I started my graduate studies and early career in industry.
-  Each chapter is structured around real-world scenarios and iteratively builds up a solution with code provided every step of the way. By the end, you'll have the agency to explore, apply, replicate, and improve upon innovations and publications at the intersection of machine learning and drug discovery. Both seasoned researchers and newcomers welcome -- no prior background in chemistry or machine learning is necessary!
+  I’m thrilled to announce that I’m presenting a short demo at PyTorch Conference, Oct 22-23 in San Francisco!  Check out my session, "Designing Medicines from Scratch: PyTorch Workflows for De Novo Drug Discovery", and <a href="https://bit.ly/4cjkIE6" target="_blank">explore the schedule</a>.
   </p>
 </div>
 
@@ -35,10 +30,13 @@ redirect_from:
   Previously, I was a Research Scientist with Amazon's Alexa & AGI team , where I contributed to the Amazon Nova model family. There, I focused on enhancing tool usage capabilities and developing dynamic data selection strategies for multilingual expansion, all while owning experimentation and production model release cycles.
   </p>
   <p>  
-  My background is rooted in the intersection of deep learning and drug discovery, which was the focus of my PhD at Washington University in St. Louis and the subject of my book, "Machine Learning for Drug Discovery" (check it out: https://www.manning.com/books/machine-learning-for-drug-discovery).
+  My background is rooted in the intersection of deep learning and drug discovery, which was the focus of my PhD at Washington University in St. Louis <a href="https://www.manning.com/books/machine-learning-for-drug-discovery">and the subject of my book, "Machine Learning for Drug Discovery"</a> -- Check it out!.
+  The search for novel, improved therapeutics is an important problem and impacts all of our lives. "Machine Learning for Drug Discovery" is an informative deep dive that aligns machine learning and deep learning theory with contemporary applications in drug discovery. While a cliché, it is nevertheless true: this is the book I wish I had available to me when I started my graduate studies and early career in industry.
+  Each chapter is structured around real-world scenarios and iteratively builds up a solution with code provided every step of the way. By the end, you'll have the agency to explore, apply, replicate, and improve upon innovations and publications at the intersection of machine learning and drug discovery. Both seasoned researchers and newcomers welcome -- no prior background in chemistry or machine learning is necessary!
+  </p>
   </p>
   <p>  
-  My doctoral research involved modeling drug metabolism networks using graph neural networks to predict drug toxicity and applying machine learning to electronic health records to predict drug-induced liver injury and drug-drug interactions. As part of my research, I served as a core maintainer of XenoSite (https://swami.wustl.edu/xenosite/) and I launched the XenoNet Web Server (https://swami.wustl.edu/xenonet/). I remain connected to the academic community as an Adjunct Instructor at the University of California, Berkeley , where I develop and teach graduate-level courses in machine learning and cheminformatics.
+  My doctoral research involved modeling drug metabolism networks using graph neural networks to predict drug toxicity and applying machine learning to electronic health records to predict drug-induced liver injury and drug-drug interactions. As part of my research, I served as a core maintainer of <a href="https://swami.wustl.edu/xenosite/">XenoSite</a> and I launched the <a href="https://swami.wustl.edu/xenonet/">XenoNet Web Server</a>. I remain connected to the academic community as an Adjunct Instructor at the University of California, Berkeley , where I develop and teach graduate-level courses in machine learning and cheminformatics.
   </p>
   <p>  
   I'm always interested in connecting with others who are passionate about building impactful technology. Please feel free to reach out to discuss agentic AI, computational drug discovery, or potential collaborations.
